@@ -187,6 +187,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #11595: Fix assorted bugs in packaging.util.cfg_to_args, a
+  compatibility helper for the distutils-packaging transition.  Original patch
+  by Erik Bray.
+
 - Issue #12246: Warn and fail when trying to install a third-party project from
   an uninstalled Python (built in a source checkout).  Original patch by
   Tshepang Lekhonkhobe.
